--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -190,7 +190,8 @@ _:-ms-fullscreen, :root .main {
 .amount {
   width: 100%;
   text-align: center;
-  padding: 1.5rem 1rem 1.5rem 1rem;
+  padding: 2.5rem 1rem 2.5rem 1rem;
+  margin-bottom: 11px;
   color: #fff;
   height: 150px;
   margin-bottom: 25px;
