--- a/public/views/walletInfo.html
+++ b/public/views/walletInfo.html
@@ -27,5 +27,13 @@
             <div translate>{{ asset.assetName }}</div>
         </li>
     </ul>
+
+    <div class="text-center m20t">
+        <a ng-click="$root.go('preferences')" class="button outline round light-gray tiny preferences-icon m0">
+            <i class="fi-widget size-18 vm"></i>
+            <span translate>Advanced</span>
+        </a>
+    </div>
 </div>
 <div class="extra-margin-bottom"></div>
+
