--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -86,7 +86,8 @@
             </div>
 
             <div ng-click='index.updateAll({triggerTxUpdate: true})'  ng-show="index.totalAssetBalanceStr && !index.updateError && index.walletScanStatus != 'error'">
-              <strong class="size-36">{{index.totalAssetBalanceStr}}</strong>
+              <strong class="size-36" ng-show="index.totalAssetBalanceStr && index.isAssetWallet">{{index.totalAssetBalanceStr}}</strong>
+              <strong class="size-36" ng-hide="index.isAssetWallet">{{index.totalBalanceStr}}</strong>
               <div class="size-14"
                 ng-if="index.totalBalanceAlternative" ng-hide="true">
                 {{index.totalBalanceAlternative}} {{index.alternativeIsoCode}}
