--- a/public/views/includes/walletInfo.html
+++ b/public/views/includes/walletInfo.html
@@ -1,4 +1,4 @@
-
+<span class="size-12" ng-click="$root.go('walletInfo')" translate>asset</span>
 <span ng-show="index.isShared" class="size-12"><span translate>{{index.m}}-of-{{index.n}}</span></span>
 <img style="height:0.6em; margin-right: 1px;"  ng-show="index.network != 'livenet'" src="img/icon-testnet-white.svg">
 <img style="height:0.6em; margin-right: 1px;"  ng-show="!index.canSign && !index.isPrivKeyExternal"
@@ -17,4 +17,3 @@ src="img/icon-ledger-white.svg">
 
 <img style="height:0.6em"  class="animated flash infinite" ng-show="index.loadingWallet ||
 index.updatingTxHistory" src="img/icon-sync-white.svg">
-
