Open wallet info on wallet icon click

--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -109,7 +109,8 @@
 
         <div class="avatar-name columns line-b">
           <div class="avatar-wallet left"
-            ng-style="{'background-color':index.backgroundColor}">
+            ng-style="{'background-color':index.backgroundColor}"
+            ng-click="$root.go('walletInfo')">
             <i class="icon-wallet size-24"></i>
           </div>
           <div class="wallet-info">
