--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -238,6 +238,7 @@ _:-ms-fullscreen, :root .main {
   font-weight: 700;
   text-align: center;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .walletHome .wallet-info {
