Colored topbar on wallet info screen

--- a/public/views/walletInfo.html
+++ b/public/views/walletInfo.html
@@ -1,6 +1,6 @@
 <div class="topbar-container"
      ng-include="'views/includes/topbar.html'"
-     ng-init="titleSection='Wallet Information'; goBackToState = 'walletHome'; noColor = true">
+     ng-init="titleSection='Wallet Information'; goBackToState = 'walletHome';">
 </div>
 
 
