--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1029,6 +1029,11 @@ a.button.postfix {
   color: #fff;
 }
 
+.auto-width {
+  width: auto !important;
+  padding: 0 3px !important;
+}
+
 .pointer {
   cursor: pointer;
 }
