--- a/public/views/walletInfo.html
+++ b/public/views/walletInfo.html
@@ -7,7 +7,7 @@
 <div class="content preferences" ng-controller="walletInfoController as walletInfo">
     <h4 class="title m0" translate>Asset</h4>
     <ul class="no-bullet m0 ">
-        <li ng-repeat="asset in walletInfo.assets" ng-click="walletInfo.setWalletAsset(asset)">
+        <li ng-repeat="asset in walletInfo.assets" ng-click="walletInfo.setSelectedAsset(asset)">
             <div class="right">
                 <span class="text-gray">{{ asset.balanceStr }}</span>
                 <div class="check-icon-place" ng-class="{ 'fi-check' : walletInfo.assetId == asset.assetId }"></div>
