--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -220,7 +220,7 @@
          </div>
         </div>
         
-        <div ng-repeat="btx in index.txHistory | filter: index.filterHistory"
+        <div ng-repeat="btx in index.txHistory"
           ng-click="home.openTxModal(btx)"
           class="row collapse last-transactions-content">
           <div class="large-6 medium-6 small-6 columns size-14">
