Fix locked amount for empty wallets

--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -151,7 +151,7 @@
             {{index.alternativeIsoCode}} </span>
         </div>
         <div class="text-gray text-center size-12 p10t"
-            ng-show="index.asset.lockedBalanceStr && index.asset.isAsset">
+            ng-show="index.asset.lockedAmount && index.asset.isAsset">
           <span translate>Total Locked Assets</span>:
           <b>{{index.asset.lockedBalanceStr}} </b>
         </div>
