--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -161,7 +161,7 @@
       <div ng-if="index.txps[0] && index.asset.assetId">
         <h4 ng-show="index.requiresMultipleSignatures" class="title m0" translate>Payment Proposals</h4>
         <h4 ng-show="!index.requiresMultipleSignatures" class="title m0" translate>Unsent transactions</h4>
-        <div class="last-transactions pr" ng-repeat="tx in index.txps | filter: index.filterProposals">
+        <div class="last-transactions pr" ng-repeat="tx in index.txps">
           <div ng-include="index.txTemplateUrl"></div>
         </div>
 
