--- a/public/views/modals/tx-details.html
+++ b/public/views/modals/tx-details.html
@@ -29,7 +29,7 @@
         <img src="img/icon-moved.svg" alt="sync" width="50">
         <p class="m0 text-gray size-14" translate>Moved</p>
       </div>
-      
+
       <div class="size-36">
         <span ng-if="btx.action == 'received'">+</span><span ng-if="btx.action == 'sent'">-</span>{{btx.amountStr}}
       </div>
@@ -44,14 +44,14 @@
     </div>
     <div ng-show="btx.action == 'invalid'">
       -
-    </div> 
+    </div>
   </div>
 
   <h4 class="title m0" translate>Details</h4>
 
-  <ul class="no-bullet size-14 m0"> 
+  <ul class="no-bullet size-14 m0">
 
-    <li ng-if="!btx.hasMultiplesOutputs && btx.addressTo && btx.addressTo != 'N/A'" class="line-b p10 oh" ng-click="copyToClipboard(btx.addressTo)">
+    <li ng-if="(!btx.hasMultiplesOutputs || btx.isColored) && btx.addressTo && btx.addressTo != 'N/A'" class="line-b p10 oh" ng-click="copyToClipboard(btx.addressTo)">
     <span class="text-gray" translate>To</span>
     <span class="right">
       <span ng-if="btx.merchant">
@@ -63,9 +63,9 @@
         <contact ng-show="!btx.labelTo" class="enable_text_select" address="{{btx.addressTo}}"></contact>
       </span>
     </span>
-    </li> 
+    </li>
 
-    <li ng-show="btx.hasMultiplesOutputs" class="line-b p10 oh" 
+    <li ng-show="btx.hasMultiplesOutputs && !btx.isColored" class="line-b p10 oh"
       ng-click="showMultiplesOutputs = !showMultiplesOutputs">
       <span class="text-gray" translate>Recipients</span>
       <span class="right">{{btx.recipientCount}}
@@ -74,11 +74,11 @@
       </span>
     </li>
 
-    <div class="line-b" ng-show="btx.hasMultiplesOutputs && showMultiplesOutputs"
+    <div class="line-b" ng-show="btx.hasMultiplesOutputs && showMultiplesOutputs && !btx.isColored"
       ng-repeat="output in btx.outputs"
       ng-include="'views/includes/output.html'">
     </div>
-    
+
     <li ng-if="btx.action == 'invalid'" class="line-b p10 oh">
     <span class="right" translate>
       This transaction has become invalid; possibly due to a double spend attempt.
@@ -116,7 +116,7 @@
       <span class="label gray radius" ng-show="btx.safeConfirmed">
         {{btx.safeConfirmed}}
       </span>
- 
+
     </span>
     </li>
   </ul>
