--- a/public/views/walletInfo.html
+++ b/public/views/walletInfo.html
@@ -3,9 +3,10 @@
      ng-init="titleSection='Wallet Information'; goBackToState = 'walletHome';">
 </div>
 
+<div ng-include="'views/includes/progressReport.html'"></div>
 
 <div class="content preferences" ng-controller="walletInfoController as walletInfo">
-    <h4 class="title m0" translate>Asset</h4>
+    <h4 class="title m0" ng-show="walletInfo.assets" translate>Asset</h4>
     <ul class="no-bullet m0 ">
         <li ng-repeat="asset in walletInfo.assets" ng-click="walletInfo.setSelectedAsset(asset)">
             <div class="right">
