--- a/public/views/modals/tx-details.html
+++ b/public/views/modals/tx-details.html
@@ -95,7 +95,7 @@
       <time>({{ btx.time * 1000 | amTimeAgo}})</time>
     </span>
     </li>
-    <li class="line-b p10" ng-show="btx.action != 'received'">
+    <li class="line-b p10" ng-show="btx.action != 'received' && !btx.isColored">
       <span class="text-gray" translate>Fee</span>
       <span class="right">{{btx.feeStr}}</span>
     </li>
