--- a/public/views/modals/tx-details.html
+++ b/public/views/modals/tx-details.html
@@ -90,7 +90,7 @@
       <time>({{ btx.time * 1000 | amTimeAgo}})</time>
     </span>
     </li>
-    <li class="line-b p10" ng-show="btx.action != 'received'" ng-click="copyToClipboard(btx.feeStr)">
+    <li class="line-b p10" ng-show="btx.action != 'received' && !btx.isColored" ng-click="copyToClipboard(btx.feeStr)">
       <span class="text-gray" translate>Fee</span>
       <span class="right enable_text_select">{{btx.feeStr}}</span>
     </li>
