--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -325,7 +325,7 @@
           </div>
         </div>
         <div class="row m20t">
-          <div class="small-12 columns" ng-show="!home.generatingAddress && home.addr[index.walletId]">
+          <div class="small-12 columns" ng-show="!home.generatingAddress && home.addr[index.walletId] && !index.asset.isAsset">
             <a class="button expand small round m10b" ng-click="home.openCustomizedAmountModal(home.addr[index.walletId])"
             ng-style="{'background-color':index.backgroundColor}">
               <span translate>Request a specific amount</span>
@@ -353,7 +353,7 @@
         <h4 class="title m0">
           <available-balance></available-balance>
           <a
-            ng-show="!home.lockedCurrentFeePerKb && index.feeToSendMaxStr && index.availableBalanceSat > 0 && !home.blockUx && !home.lockAmount"
+            ng-show="!home.lockedCurrentFeePerKb && index.feeToSendMaxStr && index.availableBalanceSat > 0 && !home.blockUx && !home.lockAmount && !index.asset.isAsset"
             ng-click="home.sendAll()"
              translate> Send All
           </a>
