Move updates to walletService to ease updating from upstream

--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -368,8 +368,8 @@
         </span>
       </div>
       <div class="row m20t">
-        <div class="large-12 large-centered columns">
-          <form name="sendForm" ng-submit="home.submitForm(index.walletAsset)" ng-disabled="home.blockUx || home.onGoingProcess" novalidate>
+        <div class="large-12 large-centered columns"> 
+          <form name="sendForm" ng-submit="home.submitForm()" ng-disabled="home.blockUx || home.onGoingProcess" novalidate> 
 
             <div ng-hide="home._paypro || home.hideAddress">
               <div class="row collapse">
