--- a/cordova/wp/MainPage.xaml
+++ b/cordova/wp/MainPage.xaml
@@ -17,7 +17,7 @@
  under the License. 
 -->
 <phone:PhoneApplicationPage 
-    x:Class="br.com.urv2.carteira.MainPage"
+    x:Class="org.coloredcoins.unicoisa.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:phone="clr-namespace:Microsoft.Phone.Controls;assembly=Microsoft.Phone"
