--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -1,6 +1,6 @@
 
-<div 
-  class="topbar-container" 
+<div
+  class="topbar-container"
   ng-include="'views/includes/topbar.html'"
   ng-init="titleSection='Global preferences'; closeToHome = true; noColor = true">
 </div>
@@ -16,9 +16,9 @@
       </div>
       <div translate>Language</div>
     </li>
-  </ul> 
+  </ul>
   <h4></h4>
-  <ul class="no-bullet m0 ">
+  <ul class="no-bullet m0 " ng-show="index.asset.isAsset === false">
     <li ng-click="$root.go('preferencesUnit')">
       <div class="right text-gray">
         {{prefGlobal.unitName}}
@@ -35,14 +35,14 @@
     </li>
   </ul>
   <h4></h4>
-  <ul class="no-bullet m0 ">
+  <ul class="no-bullet m0 " ng-show="index.asset.isAsset === false">
     <li ng-click="$root.go('preferencesFee')">
       <div class="right text-gray">
         {{prefGlobal.feeOpts[prefGlobal.currentFeeLevel]|translate}}
         <i class="icon-arrow-right3 size-24"></i>
       </div>
       <div translate>Bitcoin Network Fee Policy</div>
-    </li>  
+    </li>
     <li>
       <switch id="spend-unconfirmed" name="spendUnconfirmed" ng-model="spendUnconfirmed" class="green right"></switch>
       <div translate>Use Unconfirmed Funds</div>
@@ -59,12 +59,12 @@
   </div>
   <h4></h4>
   <ul class="no-bullet m0 ">
-    <li>
+    <li ng-show="index.asset.isAsset === false">
       <switch id="glidera-enabled" name="glideraEnabled" ng-model="glideraEnabled" class="green right"></switch>
       <div>Enable Glidera Service</div>
     </li>
- 
-    <!-- Disabled for testnet 
+
+    <!-- Disabled for testnet
     <li ng-show="glideraEnabled">
       <span>Glidera Sandbox</span>
       <switch id="glidera-testnet" name="glideraTestnet" ng-model="glideraTestnet" class="green right"></switch>
@@ -74,7 +74,7 @@
   <h4></h4>
   <ul class="no-bullet m0">
     <li ng-click="$root.go('about')">
-      <i class="icon-arrow-right3 size-24 right text-gray"></i>  
+      <i class="icon-arrow-right3 size-24 right text-gray"></i>
       <div translate>About Copay</div>
     </li>
   </ul>
