Hide color preferences

--- a/public/views/preferences.html
+++ b/public/views/preferences.html
@@ -29,7 +29,7 @@
       <div translate>Email Notifications</div>
     </li>
 
-    <li ng-click="$root.go('preferencesColor')">
+    <li ng-if="false" ng-click="$root.go('preferencesColor')">
       <div class="right text-gray">
         <span ng-style="{'color':index.backgroundColor}">&block;</span>
         <i class="icon-arrow-right3 size-24"></i>
