--- a/public/views/includes/sidebar.html
+++ b/public/views/includes/sidebar.html
@@ -1,4 +1,4 @@
-<nav class="sidebar left-off-canvas-menu" ng-controller="sidebarController as sidebar">
+<nav class="sidebar left-off-canvas-menu" style="background-color: {{index.secondaryColor}}" ng-controller="sidebarController as sidebar">
   <header>
     <logo ng-if="!sidebar.isWindowsPhoneApp" negative="true" width="80"></logo>
     <img ng-if="sidebar.isWindowsPhoneApp" src="img/logo-negative.png" alt="Copay" width="80">
