--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -67,7 +67,7 @@
         <div class="avatar-name columns line-b">
           <div class="avatar-wallet left"
             ng-style="{'background-color':index.backgroundColor}"
-            ng-click="$root.go('walletInfo')">
+            ng-click="index.openWalletInfo()">
             <i class="icon-wallet size-24"></i>
           </div>
           <div class="wallet-info">
