--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -326,7 +326,7 @@ a.missing-copayers {
 }
 
 .sidebar li.nav-item.selected {
-  background: rgba(255,255,255,0.1);
+  background: rgba(0, 0, 0, 0.45);
 }
 
 .sidebar .avatar-wallet, .payment-uri .avatar-wallet, .modal-content .avatar-wallet {
