--- a/public/views/preferencesGlobal.html
+++ b/public/views/preferencesGlobal.html
@@ -16,7 +16,55 @@
       </div>
       <div translate>Language</div>
     </li>
-  </ul> 
+  </ul>
+  <div ng-if="!index.asset.isAsset">
+    <h4></h4>
+    <ul class="no-bullet m0 ">
+      <li ng-click="$root.go('preferencesUnit')">
+        <div class="right text-gray">
+          {{prefGlobal.unitName}}
+          <i class="icon-arrow-right3 size-24"></i>
+        </div>
+        <div translate>Unit</div>
+      </li>
+      <li ng-click="$root.go('preferencesAltCurrency')">
+        <div class="right text-gray">
+          {{prefGlobal.selectedAlternative.name}}
+          <i class="icon-arrow-right3 size-24"></i>
+        </div>
+        <div translate>Alternative Currency</div>
+      </li>
+    </ul>
+    <h4></h4>
+    <ul class="no-bullet m0 ">
+      <li ng-click="$root.go('preferencesFee')"
+        ng-show="(index.network == 'livenet' ? index.feeLevels.livenet : index.feeLevels.testnet)">
+        <div class="right text-gray">
+          {{index.feeOpts[index.currentFeeLevel]|translate}}
+          <i class="icon-arrow-right3 size-24"></i>
+        </div>
+        <div translate>Bitcoin Network Fee Policy</div>
+      </li>  
+      <li>
+        <switch id="spend-unconfirmed" name="spendUnconfirmed" ng-model="spendUnconfirmed" class="green right"></switch>
+        <div translate>Use Unconfirmed Funds</div>
+      </li>
+    </ul>
+    <h4></h4>
+    <ul class="no-bullet m0 ">
+      <li>
+        <switch id="glidera-enabled" name="glideraEnabled" ng-model="glideraEnabled" class="green right"></switch>
+        <div>Enable Glidera Service</div>
+      </li>
+   
+      <!-- Disabled for testnet 
+      <li ng-show="glideraEnabled">
+        <span>Glidera Sandbox</span>
+        <switch id="glidera-testnet" name="glideraTestnet" ng-model="glideraTestnet" class="green right"></switch>
+      </li>
+      -->
+    </ul> 
+  </div>
   <h4></h4>
   <ul class="no-bullet m0">
     <li ng-click="$root.go('about')">
