Support multiple assets

--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -42,8 +42,8 @@
 
             <div ng-click='index.updateAll({triggerTxUpdate: true})'
               ng-show="index.asset.assetId && !index.updateError && index.walletScanStatus != 'error'">
-              <strong class="size-36" ng-show="index.asset.isAsset">{{index.asset.balanceStr|rawHtml}}</strong>
-
+              <strong class="size-36" ng-if="index.asset.isAsset">{{index.asset.balanceStr|rawHtml}}</strong>
+              
               <strong class="size-36" ng-show="!index.asset.isAsset">{{index.totalBalanceStr}}</strong>
               <div class="size-14"
                 ng-if="index.totalBalanceAlternative && !index.asset.isAsset">
