--- a/public/views/includes/sidebar.html
+++ b/public/views/includes/sidebar.html
@@ -1,7 +1,7 @@
 <nav class="sidebar left-off-canvas-menu" style="background-color: {{index.secondaryColor}}" ng-controller="sidebarController as sidebar">
   <header>
-    <logo ng-if="!sidebar.isWindowsPhoneApp" negative="true" width="80"></logo>
-    <img ng-if="sidebar.isWindowsPhoneApp" src="img/logo-negative.png" alt="Copay" width="80">
+    <logo ng-if="!sidebar.isWindowsPhoneApp" width="120"></logo>
+    <img ng-if="sidebar.isWindowsPhoneApp" src="img/logo-negative.png" alt="Copay" width="120">
     <div ng-include="'views/includes/version.html'"></div>
   </header>
   <ul class="off-canvas-list">
