feat: show activity indictor for assets loading

--- a/public/views/walletHome.html
+++ b/public/views/walletHome.html
@@ -21,7 +21,7 @@
         <div class="rect4"></div>
         <div class="rect5"></div>
       </div>
-       <span translate>Updating Wallet...</span>
+       <span translate>{{index.ongoingProcess || 'Updating Wallet'}}...</span>
      </div>
   </div>
 
