--- a/public/views/modals/txp-details.html
+++ b/public/views/modals/txp-details.html
@@ -12,12 +12,12 @@
     <div class="modal-content fix-modals-touch" ng-init="updateCopayerList()">
       <div class="payment-proposal-head" ng-style="{'background-color':color}">
         <div class="size-36">{{tx.amountStr}}</div>
-        <div class="size-14 text-light" ng-show="tx.alternativeAmountStr && !isAsset">{{tx.alternativeAmountStr}}</div>
+        <div class="size-14 text-light" ng-show="tx.alternativeAmountStr">{{tx.alternativeAmountStr}}</div>
         <i class="db fi-arrow-down size-24 m10v"></i>
         <span class="payment-proposal-to" ng-click="copyToClipboard(tx.toAddress, $event)">
           <i class="fi-bitcoin left"></i>
-          <contact ng-if="!tx.hasMultiplesOutputs || isAsset" class="dib enable_text_select ellipsis m5t m5b size-14" address="{{tx.toAddress}}"></contact>
-          <span ng-if="tx.hasMultiplesOutputs && !isAsset" translate>Multiple recipients</span>
+          <contact ng-if="!tx.hasMultiplesOutputs" class="dib enable_text_select ellipsis m5t m5b size-14" address="{{tx.toAddress}}"></contact>
+          <span ng-if="tx.hasMultiplesOutputs" translate>Multiple recipients</span>
         </span>
       </div>
 
@@ -72,7 +72,7 @@
           <span class="right">{{tx.message}}</span>
         </li>
 
-        <li ng-show="tx.hasMultiplesOutputs && !isAsset" class="line-b p10 oh" ng-click="showMultiplesOutputs = !showMultiplesOutputs">
+        <li ng-show="tx.hasMultiplesOutputs" class="line-b p10 oh" ng-click="showMultiplesOutputs = !showMultiplesOutputs">
           <span class="text-gray" translate>Recipients</span>
           <span class="right">{{tx.recipientCount}}
             <i ng-show="showMultiplesOutputs" class="icon-arrow-up3 size-24"></i>
@@ -80,11 +80,11 @@
           </span>
         </li>
 
-        <div class="line-b" ng-show="tx.hasMultiplesOutputs && showMultiplesOutputs && !isAsset"
+        <div class="line-b" ng-show="tx.hasMultiplesOutputs && showMultiplesOutputs"
           ng-repeat="output in tx.outputs" ng-include="'views/includes/output.html'">
         </div>
 
-        <li class="line-b p10" ng-show="!isAsset">
+        <li class="line-b p10">
           <span class="text-gray" translate>Fee</span>
           <span class="right">{{tx.feeStr}}</span>
         </li>
