--- a/public/views/modals/tx-details.html
+++ b/public/views/modals/tx-details.html
@@ -45,7 +45,7 @@
       <h4 class="title m0" translate>Details</h4>
 
       <ul class="no-bullet size-14 m0">
-        <li ng-if="(!btx.hasMultiplesOutputs || btx.isColored) && btx.addressTo && btx.addressTo != 'N/A'" class="line-b p10 oh"
+        <li ng-if="!btx.hasMultiplesOutputs && btx.addressTo && btx.addressTo != 'N/A'" class="line-b p10 oh"
           ng-click="copyToClipboard(btx.addressTo, $event)">
           <span class="text-gray" translate>To</span>
           <span class="right">
@@ -60,7 +60,7 @@
           </span>
         </li>
 
-        <li ng-show="btx.hasMultiplesOutputs && !btx.isColored" class="line-b p10 oh"
+        <li ng-show="btx.hasMultiplesOutputs" class="line-b p10 oh"
           ng-click="showMultiplesOutputs = !showMultiplesOutputs">
           <span class="text-gray" translate>Recipients</span>
           <span class="right">{{btx.recipientCount}}
@@ -69,7 +69,7 @@
           </span>
         </li>
 
-        <div class="line-b" ng-show="btx.hasMultiplesOutputs && showMultiplesOutputs && !btx.isColored"
+        <div class="line-b" ng-show="btx.hasMultiplesOutputs && showMultiplesOutputs"
           ng-repeat="output in btx.outputs"
           ng-include="'views/includes/output.html'">
         </div>
@@ -88,7 +88,7 @@
           </span>
         </li>
 
-        <li class="line-b p10" ng-show="btx.action != 'received' && !btx.isColored"
+        <li class="line-b p10" ng-show="btx.action != 'received'"
           ng-click="copyToClipboard(btx.feeStr, $event)">
           <span class="text-gray" translate>Fee</span>
           <span class="right enable_text_select">{{btx.feeStr}}</span>
